AM_CPPFLAGS = -fPIC

AM_LDFLAGS = -pthread -g

noinst_LIBRARIES=libpacket.a

libpacket_a_SOURCES = \
	CMysqlCommandPacket.cpp 	CMysqlCommandPacket.h \
	CMysqlEofPacket.cpp 		CMysqlEofPacket.h \
	CMysqlErrorPacket.cpp 		CMysqlErrorPacket.h \
	CMysqlFieldPacket.cpp 		CMysqlFieldPacket.h \
	CMysqlHandshakePacket.cpp 	CMysqlHandshakePacket.h \
	CMysqlOKPacket.cpp 		CMysqlOKPacket.h \
	CMysqlPacketHeader.h 		CMysqlResHeaderPacket.cpp \
	CMysqlResHeaderPacket.h 	CMysqlRowPacket.cpp \
	CMysqlRowPacket.h 		CMysqlSQLPacket.cpp \
	CMysqlSQLPacket.h 		CMysqlSprPacket.cpp \
	CMysqlSprPacket.h
